update gitignore, move files around, add include_guard option

--- a/meson.build
+++ b/meson.build
@@ -2,21 +2,25 @@ project('vanilla', 'C')
 
 conf_data = configuration_data()
 
-if get_option('no_stderr')
-    conf_data.set('use_dprintf', 0)
-    conf_data.set('printf', get_option('printf'))
-else
-    conf_data.set('use_dprintf', 1)
-    conf_data.set('dprintf', get_option('dprintf'))
-endif
+conf_data.set10('use_dprintf', get_option('no_stderr'))
+conf_data.set('printf', get_option('printf'))
+conf_data.set('dprintf', get_option('dprintf'))
 
 cfile = configure_file(input:'config.h.in', output: 'config.h',
                        configuration: conf_data)
 
-log_s = 'log/log.c'
+sources = []
 
-include_directories = [include_directories('.')]
-static_library = static_library(meson.project_name(), log_s,
+if get_option('include_guard')
+    include_directories = include_directories('.')
+else
+    include_directories = include_directories('vanilla')
+endif
+subdir('vanilla')
+
+assert(sources.length() != 0, 'No sources specified')
+static_library = static_library(meson.project_name(),
+    sources,
     c_args: ['-Wall', '-Werror', '-Os'],
     include_directories: include_directories)
 
