Add SECDED + tests

--- a/test/meson.build
+++ b/test/meson.build
@@ -4,3 +4,8 @@ e = executable('test_log', 'test_log.c',
     link_with: vanilla,
     include_directories: vanilla_i)
 test('test_logs', e)
+e = executable('test_secded', 'test_secded.c',
+    c_args: ['-Wall', '-Werror'],
+    link_with: vanilla,
+    include_directories: vanilla_i)
+test('test_secded', e)
