More integration, refacto meson

--- a/test/meson.build
+++ b/test/meson.build
@@ -1,11 +1,4 @@
-cc = meson.get_compiler('c')
-e = executable('test_log', 'test_log.c',
-    c_args: ['-Wall', '-Werror'],
-    link_with: vanilla,
-    include_directories: vanilla_i)
-test('test_logs', e)
-e = executable('test_secded', 'test_secded.c',
-    c_args: ['-Wall', '-Werror'],
-    link_with: vanilla,
-    include_directories: vanilla_i)
-test('test_secded', e)
+tests += [
+    ['test_log', files('test_log.c')],
+    ['test_secded', files('test_secded.c')],
+]
